# Heimdall

./: .dockerignore  .gitignore  CMakeLists.txt  Heimdal Spec.md
.claude/: settings.local.json
config/: infer_rfdetr.txt
docker/: Dockerfile  docker-compose.yml
docs/superpowers/plans/: 2026-04-24-deepstream-spike.md  2026-04-26-jpda-tracker.md  2026-04-26-pose-estimation.md  2026-04-26-zmq-comms.md  2026-04-27-web-ui.md
models/: labels.txt
proto/: heimdall.proto
src/: main.cpp
src/app/: heimdall_app.cpp  heimdall_app.h
src/comm/: comm_layer.cpp  comm_layer.h
src/models/bbox_parser/: CMakeLists.txt  rfdetr_parser.cpp
src/pipeline/: camera_source.cpp  camera_source.h  detection.h  pipeline.cpp  pipeline.h  probe.cpp  probe.h
src/pose/: camera_params.h  pose_estimator.cpp  pose_estimator.h
src/tracker/: field_detection.h  jpda.cpp  jpda.h  kalman.cpp  kalman.h  track.h  track_event.h  tracker.cpp  tracker.h
tests/: CMakeLists.txt  test_camera_source.cpp  test_comm_layer.cpp  test_jpda.cpp  test_kalman.cpp  test_pose_estimator.cpp  test_tracker.cpp
tools/: mock_robot.cpp
train/: export_engine.sh  export_onnx.py  pyproject.toml  quantize_fp16.py  train.py
web/: Dockerfile  pyproject.toml
web/app/: database.py  main.py  models.py
web/app/proto/: heimdall_pb2.py
web/app/routers/: cameras.py  detections.py  model_mgmt.py  settings.py  thresholds.py  tracker.py
web/app/static/: index.html
web/tests/: conftest.py  test_cameras.py  test_detections.py  test_model_mgmt.py  test_settings.py  test_thresholds.py  test_tracker.py
